spade-tests/src/snapshots/spade_tests__typeinference__int_as_if_argument.snap
---
source: spade-tests/src/typeinference.rs
---
fn a(y: int<1>) -> int<32> {
    if y {3} else {5}
}

error: If condition must be a bool, got int<1>
  ┌─ testinput:2:8
  │
1 │ fn a(y: int<1>) -> int<32> {
  │         ------ Type int<1> inferred here
2 │     if y {3} else {5}
  │        ^ Expected boolean
  │
  = note: Expected: bool
               Got: int<1>


